<resources>
    <string name="app_name">Randman Calculator</string>
    <string name="action_about">About</string>
    <string name="olives_in_kg">Olives:</string>
    <string name="olives_in_lt">Oil:</string>
    <string name="randman_result">Randman:</string>
    <string name="empty_fields_snackbar">Enter numbers!!!</string>
    <string name="zero_fields_snackbar">Input can\'t be zero!!!</string>
    <string name="clear_snackbar">Cleared</string>
    <string name="already_cleared_snackbar">Fields are already empty.</string>
    <string name="litres_hint">litres</string>
    <string name="kilograms_hint">kilograms</string>
    <string name="copyright_title">Copyright</string>
    <string name="about_info">Application for Randman percentage calculation</string>
    <string name="info_author">Made by Davor Bertovic, 2015</string>
    <string name="about_logo_hint">About logo</string>
    <string name="about_explanation">HINT: How much olive oil can you get from brutto olives kg
        weight.</string>
</resources>
