<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tabAbut"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivAboutLogo"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/about_logo_hint" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/about_info"
        android:id="@+id/tvAboutInfo"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="85dp" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvAboutExplanation"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_explanation"
        android:textAlignment="center"
        android:textSize="12sp"
        android:visibility="invisible"
        android:layout_marginTop="15dp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/info_author"
            android:id="@+id/lblInfo_Author"
            android:layout_marginTop="68dp"
            android:textSize="18sp"
            android:clickable="true" />


</LinearLayout>