<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lordclockan.randmancalculator.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olives_in_kg"
        android:id="@+id/tvOlivesInKg"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etOlivesInKg"
        android:layout_alignBottom="@+id/tvOlivesInKg"
        android:layout_alignParentEnd="false"
        android:textSize="20sp"
        android:layout_toEndOf="@id/tvOlivesInKg"
        android:layout_marginBottom="-10dp"
        android:hint="@string/kilograms_hint"
        android:layout_marginStart="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olives_in_lt"
        android:id="@+id/tvOlivesInLt"
        android:layout_below="@+id/etOlivesInKg"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etOlivesInLt"
        android:layout_alignBottom="@+id/tvOlivesInLt"
        android:layout_marginStart="50dp"
        android:layout_toEndOf="@id/tvOlivesInKg"
        android:textSize="20sp"
        android:layout_marginBottom="-10dp"
        android:hint="@string/litres_hint" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:background="#B6B6B6"
        android:layout_below="@+id/tvOlivesInLt"
        android:layout_alignParentEnd="true"
        android:id="@+id/editText2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/randman_result"
        android:id="@+id/tvRandmanTitle"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRandmanResult"
        android:layout_alignBottom="@+id/tvRandmanTitle"
        android:layout_alignEnd="@+id/editText2"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginEnd="5dp"
        android:textColor="#1b5e20" />
</RelativeLayout>
